feat(react): initial port of env/query

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/core": "^7.14.0",
     "@effect-ts/build-utils": "^0.17.3",
     "@effect-ts/core": "^0.37.3",
+    "@effect-ts/query": "^0.18.2",
     "@effect-ts/schema": "^0.1.13",
     "@effect-ts/tracing-plugin": "^0.10.1",
     "@types/cpx": "^1.5.1",
