--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -32,6 +32,11 @@
     "react": "^17.0.2"
   },
   "config": {
-    "modules": []
+    "modules": [
+      "DataSource",
+      "Env",
+      "Hub",
+      "Query"
+    ]
   }
 }
