--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -27,6 +27,7 @@
   "sideEffects": false,
   "peerDependencies": {
     "@effect-ts/core": "^0.37.3",
+    "@effect-ts/query": "^0.18.2",
     "@effect-ts/schema": "^0.1.13",
     "fast-check": ">= 2.14.0",
     "react": "^17.0.2"
